Gardenbot API switched to mysql db
